# ChangeLog for x11-misc/lightdm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.108 2015/03/03 12:05:18 dlan Exp $

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> lightdm-1.12.2.ebuild:
  add arm64 support, tested on A53 board

*lightdm-1.13.1 (19 Jan 2015)

  19 Jan 2015; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.13.1.ebuild,
  -lightdm-1.8.5.ebuild, metadata.xml:
  bump to 1.13.1. Drop 1.8.5

  19 Jan 2015; Markos Chandras <hwoarang@gentoo.org> lightdm-1.13.0.ebuild:
  Drop unconditional dependency on accountservice. Patch by Harvey Mittens. Bug
  #500152

  16 Jan 2015; Markos Chandras <hwoarang@gentoo.org> files/Xsession:
  Drop quotes from exec arguments. Bug #533456

  12 Jan 2015; Markos Chandras <hwoarang@gentoo.org> files/Xsession:
  Pass Xsession arguments to xinitrc.d/80-dbus. Bug #533456. Thanks to Joakim
  Tjernlund <Joakim.Tjernlund@transmode.se> for the patch

  11 Jan 2015; Markos Chandras <hwoarang@gentoo.org> lightdm-1.13.0.ebuild:
  Amend fix from bug #524792 to lightdm-greeter as well

  22 Dec 2014; Markos Chandras <hwoarang@gentoo.org> lightdm-1.13.0.ebuild:
  Completely inherit our system-local-login configuration. Bug #524792 by
  Patrick <gentoo@feystorm.net>

  05 Dec 2014; Agostino Sarubbo <ago@gentoo.org> lightdm-1.10.3.ebuild:
  Stable for x86, wrt bug #529834

  29 Nov 2014; Markus Meier <maekke@gentoo.org> lightdm-1.10.3.ebuild:
  arm stable, bug #529834

  26 Nov 2014; Agostino Sarubbo <ago@gentoo.org> lightdm-1.10.3.ebuild:
  Stable for amd64, wrt bug #529834

*lightdm-1.10.4 (18 Nov 2014)
*lightdm-1.13.0 (18 Nov 2014)

  18 Nov 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.10.4.ebuild,
  +lightdm-1.13.0.ebuild:
  Version bump

*lightdm-1.12.2 (16 Nov 2014)

  16 Nov 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.12.2.ebuild,
  -lightdm-1.12.1.ebuild:
  Version bump. remove old
