@@ -4,13 +4,13 @@ DESCRIPTION=A lightweight display manager
 EAPI=5
 HOMEPAGE=http://www.freedesktop.org/wiki/Software/LightDM
 IUSE=+gtk +introspection kde qt4
-KEYWORDS=~amd64 ~arm ~ppc ~x86
+KEYWORDS=~amd64 ~arm ~arm64 ~ppc ~x86
 LICENSE=GPL-3 LGPL-3
 PDEPEND=gtk? ( x11-misc/lightdm-gtk-greeter ) kde? ( x11-misc/lightdm-kde )
 RDEPEND=>=dev-libs/glib-2.32.3:2 dev-libs/libxml2 sys-apps/accountsservice virtual/pam x11-libs/libX11 >=x11-libs/libxklavier-5 introspection? ( >=dev-libs/gobject-introspection-1 ) qt4? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 ) >=sys-auth/pambase-20101024-r2
 REQUIRED_USE=|| ( gtk kde )
 RESTRICT=test
 SLOT=0
-SRC_URI=http://launchpad.net/lightdm/1.11/1.11.9/+download/lightdm-1.11.9.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
+SRC_URI=http://launchpad.net/lightdm/1.12/1.12.3/+download/lightdm-1.12.3.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	readme.gentoo	106edea5533517715013de909a333abd	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=dc2ff8e369c9e9010921567af5eab480
+_md5_=b5f4c05eec3e8a4d330a47f144d618d9
