@@ -11,6 +11,6 @@ RDEPEND=>=dev-libs/glib-2.32.3:2 dev-libs/libxml2 gnome? ( sys-apps/accountsserv
 REQUIRED_USE=|| ( gtk kde )
 RESTRICT=test
 SLOT=0
-SRC_URI=http://launchpad.net/lightdm/1.13/1.13.1/+download/lightdm-1.13.1.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
+SRC_URI=http://launchpad.net/lightdm/1.13/1.13.2/+download/lightdm-1.13.2.tar.xz mirror://gentoo/introspection-20110205.m4.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	readme.gentoo	106edea5533517715013de909a333abd	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=41b3b73d49b561a100b1040679244aef
+_md5_=716978169e7ec8df415b4ab9a6c3e17f
