@@ -12,32 +12,34 @@ AUX session-wrapper-lightdm.patch 419 SHA256 de5504221cd31c6d25ccbb21f4559780564
 DIST introspection-20110205.m4.tar.bz2 1220 SHA256 4394a606d380ae5315872ede35387f104da5fad96794d29c45c444a9d481d8b2 SHA512 5c49239935b93d86cce68b577b43d1a56d8749ab5747029bfcfa67339697134be24ef29ba6c3d133b8c03e867864637c8eb61491a4b7f6bb1e56386ed66cb9be WHIRLPOOL 0765c0a72919b26d0c8c38714450eec578a347bfc1c59d4950b633b64b17aa1cde38dfb87fdcd6e2f364c98d6c0bd3dadaa9c2a9711bd1b5ac09a583b988f500
 DIST lightdm-1.10.3.tar.xz 469992 SHA256 1e31b99eba6626ed46b7940cd53cbd585fa53a433258371490ce74dbd047889c SHA512 95000ac3686ec81bc9925ca1dd5007422b8f7b74ae63c239af4e2fe16bfb75d778a26301897516da2d6792e0a8cf519dfbfb13bc9b531f9b7856a0c99c66b2a1 WHIRLPOOL 5b97c0090c60efc0a2edcc6f8d8788b089233f0630fcc418f3d5c2aaf58940c26e1b0b449f1ef7c9240c0f0ab300df28d8eb221aa46aa2c65487228740fd9a70
 DIST lightdm-1.10.4.tar.xz 470392 SHA256 af67cb9ef36655c7a1e8c692f38c018c3be24de35f2137551b1e92c9daa0852d SHA512 dfa7212f8394a16fe0c7e8f038a48ee53f44cb9c1643c61787c1dc72cbd1134a29685ffed2df7594b235bcc1f392332399f25d455da4db0fc0d347922906231c WHIRLPOOL 1016def1600ed1e5646839a89a0ad7fa113dba1500b1cf980c7e5a3e14109b42888d6248f5de42abfb97fa3940d05412269f601e91a1a750360ae416a40390b6
-DIST lightdm-1.11.9.tar.xz 474928 SHA256 a6047c773cb7341e28385d807fd1cd1adb356c7fee0d559e7c9fd6c3c9cb934c SHA512 a0c194d36cdf257352f4e2653bd9ebf4963ce4462fd235b7d8b4bd3110637c4b154cb37dd4559c16f0713fa43a9d49416a74b1827b5eb9eb9014801e7856f2d7 WHIRLPOOL 090f73362625625b1b50be38a58c3ffa4bc9a3ee97e1c36c973a0e98c03ade34fb6f0b492904e795ec2b30da0d52c5432e70e57e736b8674aa7b426ee7c327bf
+DIST lightdm-1.10.5.tar.xz 470452 SHA256 90b2133916d46d7eeae9b14fb581ae29d09e099f4c5f82566370c21f5c6c6fcd SHA512 a5ee39228a53a666a6cc7600004932e27a3d0ea4295640171794d64b11d23938d132073dfa58289df61995512b6e5a210a4fb5bf1f89c663f6372479cad4f766 WHIRLPOOL bfdaecec39d8aafedb531746d2d28ff494f38d532c5807cb9ca258f0cb531437606dcef77c717058bd14a6e1367709239d13732ee21920919568d897b1996159
 DIST lightdm-1.12.2.tar.xz 473360 SHA256 ce36bacef7a0ac5b720dc0f4aeb1c37aa56e7b72f7390e290a670fb1b8231736 SHA512 bf3a9ce659929fb628f869ce2d4570bf46d7ae5481df2423ba845c2b652f9d6ae7a0017c5a48ac4d1b72135163031e5382edead313a6f58613c7e8d3b5f449d1 WHIRLPOOL 9bf0f0c52ad8d4bd1537a907f3c438f9f91c28c0812f9c98792c35a0149d2f8fa2f08c5d9781f671292d1c29675d4c1eae5473b3b32f40cb23f8d06c81c586c3
-DIST lightdm-1.13.0.tar.xz 476588 SHA256 c2af13c70c6ac74ddd171d4a17c101d90ced799267cfc5d8d6c9ca611def5aba SHA512 df31d9e2919a2cd2053e02321221df64ceccb2674e8d0445a79df4f59d517610fb61b7c3d53ff505f856d0ffdf9d23f7aff46ce9d633ae248cbe509f6816e6f4 WHIRLPOOL a6b97c1b9e9c6f16c1c1134d38bf7eb940e3f39b0e8bf3d47583ad208c8957b47117a7654705608b4a5c3c74a6c705d02cf8f9fcc51c7553089e9ca4f050c5cb
-DIST lightdm-1.13.1.tar.xz 476748 SHA256 e958e6afe158680b4dd18707c7fed22955f162dc46f48e6874135e83551d4275 SHA512 74d96ce380f581fd664364c0a13e66b41e823d36e2e2df8d8b663e05f6a41de4278fbfa13a9d460d16abf83d026bf2af7913cb5ab7ce122f183c363bb578c9e8 WHIRLPOOL 6f254a7cca249fced79f1dbfbefbeffddbc65fd37c02bf4c5d4b5cc267839ae533f0fcd4adc2f5df0dfc3a31a4f3b3333d5126dfbfe3a8eccf81ed09be514ea3
+DIST lightdm-1.12.3.tar.xz 473512 SHA256 c7dc90fde4f22762f38f06506b64f3b95cc3a1d9ccb8c18efa408087fd054465 SHA512 dca75324e3326a3fdc575837226a9633c7ec967e2484b03e051d5ce2f788dba8e23d4875da3c8d97cb8c6a1da843bc7500876027ca2c40e2bc4844b034acbd08 WHIRLPOOL 22a0c30032dcec66263801285017305b385789ed09b32c3e73c5db27daad44a7c44311d30f2002fe776f10cbaeb5d47727502ff19f61c0465e37987baa231de8
+DIST lightdm-1.13.2.tar.xz 478064 SHA256 579f74c175b6cb1e2e304fe8cad462f99467b50701a0b1c85fe455f41caf83af SHA512 929b0a2bacb9cb45c03664b191f7d6022b65133b286ca5af5118bb2ffc12c8eb49dcc9cb135b02880c7a9f5a6e6de59fa432c0e6a44d22426727463367239476 WHIRLPOOL d979f09f2e75a9977f8917b7d711eb803aa564a75582d7b86e24fe9ca410a6d3555081ef7e3b6750344208236f8a1d85171b267cc4ff0cb47baafe2e8f10de46
 EBUILD lightdm-1.10.3.ebuild 3264 SHA256 001f3c85828d6ac1458ead07c2b5688672c58988e6861238d41f982e3ba7006c SHA512 3c5e0332f8c38163376deefa1f8b9b6cd35f1b35517d4a226f71a98685edcdd271e238870ab00b10eb8fa1ca16a7360b3ca3ac863f1ffb6dff00d971d559503a WHIRLPOOL 6ba68a770b5b2c8f0a312583310f5322a27b6719ef490efcb89a22ecc60bf26695c195e2912059db33b115d4cb359af15a690c82cc2a1e6964ccb1e0c33ad3ae
 EBUILD lightdm-1.10.4.ebuild 3272 SHA256 ac19caac10f193c977aee89b5846c4e54ed12d00bb36f6090b03642b825cc82b SHA512 568eca2e06640dffeb88813bf593794ea29180c6d3c6c20c2435b09f885262f3f807d854ff0e21a4451ba9e71c34ac1d43dab7e9342a297a4083e1214432121d WHIRLPOOL 4028524cde75f985175751f5fcd82a081786a4b210862239abcb0e6de7c869fa5888d59bf3d8ba2ff79dc7f19a9df5099a89283c4389da50e1c2b39edff311ef
-EBUILD lightdm-1.11.9.ebuild 3314 SHA256 d751381830378f07e3fb7d7e6234d86579bfffcfbb8102698f991d3f64e30317 SHA512 e765213e7badfd1b100f91990846afc2d9af1acfc4bcfd454c527d1e4d709882a71348030582418733b8c4b44a463ccf4ee79845dcfea96555c81008d5f95998 WHIRLPOOL 7ed10fdbfc8c9d3e31974063c15befd2c0646d534022124f39dfd06fd4b2b26e013b7d89c3f63481c369fb4037859cb7aba0bfc90c8b44f94766a9651f1406e4
+EBUILD lightdm-1.10.5.ebuild 3272 SHA256 7074e1365fb645f5163d383d56016dc1638cab318282e630b3e6e6cba4f09bce SHA512 c3fcdc57861d8dd836cf9bad56f1e61c9dfdc24f1427db4b9145261246410f29d23cfa61a4f7336df0dd2a59d62ac4c0a4e94ae12a2a774bfcaf0767d5d9621c WHIRLPOOL 8e6064a82bb4966773d6afe2e38ff029a5aec06ad0e9f59eba6bbc9acf0cb9c800219ae5a25bae0943be4f0615426f39d1432bc42c921c6562c49b4cdc9e39f3
 EBUILD lightdm-1.12.2.ebuild 3400 SHA256 5888015715047ff33f1747e9b11f8949e74224bcb2ba091ad488cb99f37109b9 SHA512 b7f2bbb1ef4583978e5cad47504524d813786d91c8bb093142c07e21663a9eff989281a9579752425c1663461debac21ec4dcd40b95e0e743f86583a2c910399 WHIRLPOOL 1d03c0a2994efdaf51588c8d3d80a14f5670db7b16cffafe7cbb4202c989b1baab2ef9f168f4d23de9cdbbdeb4db0bf6097dbe721f4befcdf387009edaf53afb
-EBUILD lightdm-1.13.0.ebuild 3627 SHA256 f9660eeef0afa09f8739538c3ef87e0da104d22f2fd5ee390af17295af922f8c SHA512 ea86d44ca391a8e79610c53337f8bfadc36ff93f983f5d394ae22985978b8c29242724e0ac2c6a34176196619253ce1895095f08b76de98a78f9bfc34b81d14b WHIRLPOOL 9fc9f7825764f5778b58ef6ad2b88f6904b1a5ca3de198b797356b05bc2a1aad8a7c557e7dbb7b2fdb9559498df60af4dc02fa8428ee6f0fa5a1c76fb6c81c99
-EBUILD lightdm-1.13.1.ebuild 3627 SHA256 a014c2ca85872fa281a7327b998b8730485709cbb8f641d64987116b47bf38d6 SHA512 ad0f02f542cb99d52aec04f280233e32e4a8ff70118ee4ce48832aaeb77c753a8f081eb5f1322b64341f3ec101b20b5f2d5d299229dfb6d4c028e30f7fe2a6f1 WHIRLPOOL ad01df113f4f089e816a922f8d1af45cc57af40c0c59142de01c943fe38ae520f2eef27763d9a472919956b83161e9f948c50367436dae570181ff4768879ca0
-MISC ChangeLog 17734 SHA256 f8064ef9cfedaa20739e5026bcd7ba4388a2170bf78db91c4e0e03bbd7cb6518 SHA512 e386c12bf24c251d759104d53f57d8959f9d60db128584bcd7f70db4e85b610ac638ef2255c280122d27ab0479944c56e78654c48a60ad29e905b170f03df07e WHIRLPOOL d3546c199982a7dedf62e3498a9d25dd3ae28d1e102b338964b005c9c17c500222b273091b88352695d8ffc31be4ac58b28c1004e2c7355a8ab595f88303fa31
+EBUILD lightdm-1.12.3.ebuild 3404 SHA256 4b758f0930ff493d70ae17f126ea82f09eea84c09296b1530d3c69f66a4929b4 SHA512 9f0fc2492d28c4217a71f617e10e2b1d08da795b60ea056dcc7d38564e4e1fc5bae669f65207587c1d233dc473cd3499592a1982748071815a60323dd0d8a7f8 WHIRLPOOL 0903e1a27574c69ffea1b4ef6bb1e765a39d2741eb3c86ca3a5aea605a0a744f0b6d75c6e4e8f97dd512e53612f50bd24299c5e3cc473a8a997947ebcc73810c
+EBUILD lightdm-1.13.2.ebuild 3627 SHA256 2d2c408cd28cfb1db074628b97dc4e3bdb92525a7145e0c4063a3441561ef874 SHA512 893666dc205b7765724fae6a036314609785705d1b947f112785510415138350a554cd727fe536490c3d358c5a4127e1ae7af98bd37b5a67dad5c10966038439 WHIRLPOOL 7ea325fa5a18ce8449b0bd908ce4f025a5f45d0ab6d2c7fd946f8c70e21d8165f4e328818b53a7dfb826fd6b35000510a3f30fe5d1e19ed9faba75be93be0077
+MISC ChangeLog 18047 SHA256 e048ee5838d195ffec60023e08c107eb8b2767aed43a813388f04b6ed4e9a744 SHA512 d157f82263c72108bb6e620aec3d7b3d4f5bcefa36ad4d255893e888b0ac61fd78feb2c757bf0efaf51cc57d51d4a3ed9ad01f4370eab1ffffd23ab217674fd8 WHIRLPOOL 6e55cb1a345c8cc85040f87aa9b25d664abd19f31d6b3aaa4d72bb8a894dd37da5d254a5b4a56553cb9a8cda1ae8129e4e2155fa58ff99f5f313b3cc932d1b9e
 MISC metadata.xml 479 SHA256 4e0fa8ca99f6b80f9a8aac474b5bc0392d3f0f63e3f791b3e21d069798e50382 SHA512 b5346c4319d9a8bc194792450bc48b82490d6ee55b2cdf9ac902385fc2c5566fdb6021296fcd34915fd6a928c05ae96796677dd90811d0d3a0bfae20c6f4e1f7 WHIRLPOOL adae0849743226e0cf85711a70de31e9566ef15c2e2f784f7893539991871c9b5074eab8aeda03110272cc2b58f2004dc09f2fd0ac1c0928f35b5dec16f7f48d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9TKjAAoJEJIMDbyqvv1Vk7sQAKiSu2zA1QkkTuZjOpqxKHr5
-K55H0z0rYyyQ0AXrB5V0h6g81T0Q3HZ3PtUPsEFD84Qgw+ROnDJLk4Fx790VjbOB
-yYw/2VxcouhfuVTxfC5omSbfRSj4d7QGVG2f79W2VhUhM4K02Sj6l4pWqdtgVZuF
-jzVKvA3ELh2UDNfe/Da/yOgBkcrUpKZY/sVoNQfnQyOwLfMueOxYjaB22iSJjCdi
-KPpdmOT9tRclTPuZmNwx6BQqhYzFizjJnK+iy8rexINKot5yLPXkGl2NerfXDXQ4
-tpALITykl49R9NNqsSJDvd4Yr40r+QWbmB4psx2GTyLUHI95xfLPnjNfdXoddLWk
-AofsfXcTU9tY5J4wjtqvtJh6srSppUkKWR1mpP6J20D8Q7gRqqQzu2jiU2yMRDVi
-dN+wIVTYx6SanYMd5bj5Z3wBaOwNAuQ5pbgJ2a4ATTBnpZZZb31NMYzKxV+vTm6P
-a0QpbGgU/k605sPG3RDhklnRm1THpsY0BNpGAzFSt4DgaX8oNuLXa7olbi4zCr5W
-qQHraIPk5Sv0BLL2Lyko+EVzQy/4U/qxNezxoTDkxnpSTkPZmxrdWWVQDfj2tm0T
-M0Im/4cfz5FJYP35wuJZCgDnglBhppt1zYAoJtMqR7uMmD9jr4mY6KlcsMYT/0ES
-LK4PevwZwVp6oDx1OIip
-=ZuRG
+iQJ8BAEBCABmBQJVCJCZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88VSwQAJeZws6xFxVCMfBcFssngdQR
+5cU80AyobOwMvMl1XllPSYSgIxIaxCk7U1h+DYeQJC/UCjAwgg44dCo3J7K7lOQs
+RkvOnpXJI+dfbooK0eBgvctwrkrV9m4ZancmEgKwncoyB7EuhJlWgymMbZXzVEvt
+cwYmAp7IgO+3PKuZMhkV/uYIqfmhyAed26O24d/DLC+fXd/hmP1FZsImHoJ8TcxT
+aT+eGajQiB/oRefF1lvxdD0ZBfUuYn6OiJtrOssY0h7/oCpL6PZg12XOU7Rodqoz
+HBlZd0jRDPjC4ECAuPw1MLsXm5PHZraPTfgmmYTLGn10rZ1six1BXjo6KVh0D+3N
+JLSLUUd4VZkXfVgaKPJNGLYYd1zXIjNX0TynI4aWTRI1dSOTktEzdFof1JDhHE/q
+l/0HAhxp05H0hKrVYIDAo5OQTpjr18hnQNuiXGNM0OyBBgim7jEEx1Nna+DiIt/3
+ThNYoqZANJ1dd+OxqV+3jeAGJLjwMuQ9Q/ZXvCizsIZ8q4QSF0QJ3+zikJFz24oY
+UmrvXolYeMy09SUrxQjJHpGZLvEuCPe4x0MMuytskzoi6CiYXfZdTVHHI7+p7GqN
+Th+gKR5w5D/DLSAFccBs/o3BVDBfyXtLa970ieRIIsqci9LU0al3P1W+fuhsNga2
+9zVi0WZCFeQRfXLC1evE
+=Crdt
 -----END PGP SIGNATURE-----
