@@ -1,11 +1,11 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.13.1.ebuild,v 1.1 2015/01/19 20:33:44 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.10.5.ebuild,v 1.1 2015/03/17 20:37:44 hwoarang Exp $
 
 EAPI=5
-inherit autotools eutils pam readme.gentoo systemd versionator
+inherit autotools eutils pam readme.gentoo systemd
 
-TRUNK_VERSION="$(get_version_component_range 1-2)"
+TRUNK_VERSION="1.10"
 DESCRIPTION="A lightweight display manager"
 HOMEPAGE="http://www.freedesktop.org/wiki/Software/LightDM"
 SRC_URI="http://launchpad.net/${PN}/${TRUNK_VERSION}/${PV}/+download/${P}.tar.xz
@@ -14,12 +14,12 @@ SRC_URI="http://launchpad.net/${PN}/${TRUNK_VERSION}/${PV}/+download/${P}.tar.xz
 LICENSE="GPL-3 LGPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ppc ~x86"
-IUSE="+gtk +introspection kde qt4 +gnome"
+IUSE="+gtk +introspection kde qt4"
 REQUIRED_USE="|| ( gtk kde )"
 
 COMMON_DEPEND=">=dev-libs/glib-2.32.3:2
 	dev-libs/libxml2
-	gnome? ( sys-apps/accountsservice )
+	sys-apps/accountsservice
 	virtual/pam
 	x11-libs/libX11
 	>=x11-libs/libxklavier-5
@@ -34,7 +34,7 @@ RDEPEND="${COMMON_DEPEND}
 DEPEND="${COMMON_DEPEND}
 	dev-util/gtk-doc-am
 	dev-util/intltool
-	gnome? ( gnome-base/gnome-common )
+	gnome-base/gnome-common
 	sys-devel/gettext
 	virtual/pkgconfig"
 PDEPEND="gtk? ( x11-misc/lightdm-gtk-greeter )
@@ -104,16 +104,11 @@ src_install() {
 	doins data/{${PN},keys}.conf
 	doins "${FILESDIR}"/Xsession
 	fperms +x /etc/${PN}/Xsession
-	# /var/lib/lightdm-data could be useful. Bug #522228
-	dodir /var/lib/lightdm-data
 
 	prune_libtool_files --all
 	rm -rf "${ED}"/etc/init
 
-	# Remove existing pam file. We will build a new one. Bug #524792
-	rm -rf "${ED}"/etc/pam.d/${PN}{,-greeter}
-	pamd_mimic system-local-login ${PN} auth account password session #372229
-	pamd_mimic system-local-login ${PN}-greeter auth account password session #372229
+	pamd_mimic system-local-login ${PN} auth account session #372229
 	dopamd "${FILESDIR}"/${PN}-autologin #390863, #423163
 
 	readme.gentoo_create_doc
