@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.13.0.ebuild,v 1.4 2015/01/19 19:54:56 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.12.3.ebuild,v 1.1 2015/03/17 20:37:44 hwoarang Exp $
 
 EAPI=5
 inherit autotools eutils pam readme.gentoo systemd versionator
@@ -13,13 +13,13 @@ SRC_URI="http://launchpad.net/${PN}/${TRUNK_VERSION}/${PV}/+download/${P}.tar.xz
 
 LICENSE="GPL-3 LGPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~ppc ~x86"
-IUSE="+gtk +introspection kde qt4 +gnome"
+KEYWORDS="~amd64 ~arm ~arm64 ~ppc ~x86"
+IUSE="+gtk +introspection kde qt4"
 REQUIRED_USE="|| ( gtk kde )"
 
 COMMON_DEPEND=">=dev-libs/glib-2.32.3:2
 	dev-libs/libxml2
-	gnome? ( sys-apps/accountsservice )
+	sys-apps/accountsservice
 	virtual/pam
 	x11-libs/libX11
 	>=x11-libs/libxklavier-5
@@ -34,7 +34,7 @@ RDEPEND="${COMMON_DEPEND}
 DEPEND="${COMMON_DEPEND}
 	dev-util/gtk-doc-am
 	dev-util/intltool
-	gnome? ( gnome-base/gnome-common )
+	gnome-base/gnome-common
 	sys-devel/gettext
 	virtual/pkgconfig"
 PDEPEND="gtk? ( x11-misc/lightdm-gtk-greeter )
@@ -110,10 +110,7 @@ src_install() {
 	prune_libtool_files --all
 	rm -rf "${ED}"/etc/init
 
-	# Remove existing pam file. We will build a new one. Bug #524792
-	rm -rf "${ED}"/etc/pam.d/${PN}{,-greeter}
-	pamd_mimic system-local-login ${PN} auth account password session #372229
-	pamd_mimic system-local-login ${PN}-greeter auth account password session #372229
+	pamd_mimic system-local-login ${PN} auth account session #372229
 	dopamd "${FILESDIR}"/${PN}-autologin #390863, #423163
 
 	readme.gentoo_create_doc
