@@ -1,6 +1,15 @@
 # ChangeLog for x11-misc/lightdm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.108 2015/03/03 12:05:18 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.109 2015/03/17 20:37:44 hwoarang Exp $
+
+*lightdm-1.12.3 (17 Mar 2015)
+*lightdm-1.10.5 (17 Mar 2015)
+*lightdm-1.13.2 (17 Mar 2015)
+
+  17 Mar 2015; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.10.5.ebuild,
+  +lightdm-1.12.3.ebuild, +lightdm-1.13.2.ebuild, -lightdm-1.11.9.ebuild,
+  -lightdm-1.13.0.ebuild, -lightdm-1.13.1.ebuild:
+  Version bumps
 
   03 Mar 2015; Yixun Lan <dlan@gentoo.org> lightdm-1.12.2.ebuild:
   add arm64 support, tested on A53 board
